Adicionando página home. Alterando layout.

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="card w-25 mt-5 mx-auto">
+<div class="card w-50 mx-auto">
   <div class="card-header">
     <h4 class="mb-0"><%= t('.sign_up') %></h4>
   </div>
