--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,4 +1,4 @@
-<div class="card w-25 mt-5 mx-auto">
+<div class="card w-50 mx-auto">
   <div class="card-header">
     <h4 class="mb-0"><%= t('.forgot_your_password')  %></h4>
   </div>
