--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -7,7 +7,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <%= link_to 'Home', root_path, class: 'nav-link' %>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Link</a>
@@ -24,8 +24,7 @@
         </div>
       </li>
     </ul>
-    <%= link_to 'Entrar', new_session_path(resource_name),
-                class: 'btn btn-outline-light my-2 my-sm-0 mr-3' %>
-    <%= link_to 'Cadastrar', new_registration_path(resource_name), class: 'btn btn-outline-light my-2 my-sm-0' %>
+    <%= link_to 'Entrar', new_account_registration_path, class: 'btn btn-outline-light my-2 my-sm-0 mr-3' %>
+    <%= link_to 'Cadastrar', new_account_session_path, class: 'btn btn-outline-light my-2 my-sm-0' %>
   </div>
 </nav>
