--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,33 +1,25 @@
 <div class="card w-50 mx-auto">
   <div class="card-header">
-    <h4 class="mb-0"><%= t('.sign_up') %></h4>
+    <ul class="nav nav-tabs card-header-tabs">
+      <li class="nav-item">
+      <a class="nav-link active" id="aluno-form-tab" data-toggle="tab" href="#aluno-form" role="tab"
+         aria-controls="aluno-form" aria-selected="true">Sou um Aluno</a>
+    </li>
+      <li class="nav-item">
+        <a class="nav-link" id="empresa-form-tab" data-toggle="tab" href="#empresa-form" role="tab"
+           aria-controls="empresa-form" aria-selected="true">Sou um Empresa</a>
+      </li>
+    </ul>
   </div>
   <div class="card-body">
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-      <%= devise_error_messages! %>
-
-      <div class="form-group">
-        <%= f.label :email %><br />
-        <%= f.email_field :email, autofocus: true, autocomplete: 'email', class: 'form-control' %>
+    <div class="tab-content" id="myTabContent">
+      <div class="tab-pane fade show active" id="aluno-form" role="tabpanel" aria-labelledby="aluno-form-tab">
+        <%= render 'devise/registrations/form_aluno' %>
       </div>
-
-      <div class="form-group">
-        <%= f.label :password %>
-        <%= f.password_field :password, autocomplete: 'off', class: 'form-control' %>
-        <% if @minimum_password_length %>
-          <small class="form-text text-muted">
-            <%= t('devise.shared.minimum_password_length', count: @minimum_password_length) %>
-          </small>
-        <% end %>
+      <div class="tab-pane fade" id="empresa-form" role="tabpanel" aria-labelledby="empresa-form-tab">
+        <%= render 'devise/registrations/form_empresa' %>
       </div>
-
-      <div class="form-group">
-        <%= f.label :password_confirmation %><br />
-        <%= f.password_field :password_confirmation, autocomplete: 'off', class: 'form-control' %>
-      </div>
-
-      <%= f.submit t('.sign_up'), class: 'btn btn-success' %>
-    <% end %>
+    </div>
   </div>
   <div class="card-footer">
     <%= render 'devise/shared/links' %>
