--- a/app/views/devise/registrations/_form_empresa.html.erb
+++ b/app/views/devise/registrations/_form_empresa.html.erb
@@ -1,8 +1,25 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
+  <%= f.fields_for :empresa do |e| %>
+    <div class="form-group">
+      <%= e.label :nome %>
+      <%= e.text_field :nome, class: 'form-control' %>
+    </div>
+
+    <div class="form-group">
+      <%= e.label :cnpj %>
+      <%= e.text_field :cnpj, class: 'form-control' %>
+    </div>
+
+    <div class="form-group">
+      <%= e.label :endereco %>
+      <%= e.text_field :endereco, class: 'form-control' %>
+    </div>
+  <% end %>
+
   <div class="form-group">
-    <%= f.label :email %><br />
+    <%= f.label :email %>
     <%= f.email_field :email, autofocus: true, autocomplete: 'email', class: 'form-control' %>
   </div>
 
@@ -17,7 +34,7 @@
   </div>
 
   <div class="form-group">
-    <%= f.label :password_confirmation %><br />
+    <%= f.label :password_confirmation %>
     <%= f.password_field :password_confirmation, autocomplete: 'off', class: 'form-control' %>
   </div>
 
