Adicioando futuro link ao navbar e adicionando conteudo a home page.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,14 @@
 <h1>Bem-vindo!</h1>
+
+<p class="text-justify">
+  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla tempor egestas erat, sed efficitur neque pharetra et.
+  Interdum et malesuada fames ac ante ipsum primis in faucibus. Proin nec orci mauris. Curabitur a suscipit lorem, at
+  maximus turpis. Suspendisse nec mauris ac ipsum faucibus elementum laoreet vitae risus. Nam scelerisque, est a dictum
+  blandit, sem ipsum pretium metus, sed fringilla elit orci sit amet neque. Sed purus diam, pulvinar in maximus eu,
+  scelerisque vitae velit. Ut ultricies, lorem non efficitur lacinia, urna neque molestie arcu, a lobortis ante augue
+  sed elit. Sed magna nisi, blandit id elit non, feugiat tempus ex.
+</p>
+
+<hr>
+
+<h3>Empresas Parceiras</h3>
