Colocando alerts do devise.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
   <body>
     <%= render 'layouts/navbar' %>
     <div class="container mt-5">
+      <%= render 'layouts/devise_alerts' %>
       <%= yield %>
     </div>
   </body>
