--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -7,8 +7,16 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <%= link_to 'Home', root_path, class: 'nav-link' %>
+        <a href=<%= root_path %> class='nav-link'>
+          <%= fa_icon('home', text: 'Home') %>
+        </a>
       </li>
+      <li class="nav-item active">
+        <a href=<%= vagas_path %> class='nav-link'>
+          <%= fa_icon('briefcase', text: 'Vagas') %>
+        </a>
+      </li>
+
       <% if account_signed_in? && current_account.is_empresa? %>
         <%= render 'layouts/links_empresa' %>
       <% end %>
