--- a/app/views/vagas/_form.html.erb
+++ b/app/views/vagas/_form.html.erb
@@ -13,7 +13,12 @@
 
   <div class="field">
     <%= form.label :empresa_id %>
-    <%= form.text_field :empresa_id %>
+    <%= form.select :empresa_id, options_from_collection_for_select(@empresas, "id", "nome") %>
+  </div>
+
+  <div class="field">
+    <%= form.label :titulo %>
+    <%= form.text_field :titulo %>
   </div>
 
   <div class="field">
