--- a/app/views/vagas/index.html.erb
+++ b/app/views/vagas/index.html.erb
@@ -2,34 +2,25 @@
 
 <h1>Vagas</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Empresa</th>
-      <th>Descricao</th>
-      <th>Data fim</th>
-      <th>Data resposta</th>
-      <th>Validada</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+
+
 
   <tbody>
     <% @vagas.each do |vaga| %>
-      <tr>
-        <td><%= vaga.empresa %></td>
-        <td><%= vaga.descricao %></td>
-        <td><%= vaga.data_fim %></td>
-        <td><%= vaga.data_resposta %></td>
-        <td><%= vaga.validada %></td>
-        <td><%= link_to 'Show', vaga %></td>
-        <td><%= link_to 'Edit', edit_vaga_path(vaga) %></td>
-        <td><%= link_to 'Destroy', vaga, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+
+    <div class="media align-items-center text-muted py-3 px-3 border-top border-gray">
+      <%= image_tag  "sti.svg", class:"px-3 mr-4 rounded border border-gray", width: "128px", height: "128px" %>
+      <p class="media-body pb-3 mb-0 lh-125 pr-5">
+        <strong class="d-block text-gray-dark"><%= vaga.titulo %></strong>
+        <span class="d-block pb-2 small"><%= vaga.empresa.nome %></span>
+        <%= vaga.descricao %>
+      </p>
+      <%= link_to 'Ver mais detalhes', vaga, class: 'btn btn-outline-primary' %></td>
+    </div>
+
     <% end %>
-  </tbody>
-</table>
+
 
 <br>
 
-<%= link_to 'New Vaga', new_vaga_path %>
+<%= link_to 'Adicionar Vaga', new_vaga_path, class: 'btn btn-primary' %>
