--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,5 +14,9 @@
     <div class="container mt-5 py-5 px-5 rounded bg-light text-secondary">
       <%= yield %>
     </div>
+
+    <div class="text-center container mt-5 rounded bg-light text-secondary">
+      <%= render 'layouts/footer' %>
+    </div>
   </body>
 </html>
