--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -5,3 +5,14 @@
 .alert-alert {
   @extend .alert-danger;
 }
+
+#espera-title, #aprovadas-title, #reprovadas-title {
+  cursor: pointer;
+}
+
+.flip {
+  -moz-transition: transform 0.5s;
+  -webkit-transition: transform 0.5s;
+  transition: transform 0.5s;
+  transform: rotate(-180deg);
+}
