--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -16,8 +16,8 @@ body {
 }
 
 .flip {
-  -moz-transition: transform 0.5s;
-  -webkit-transition: transform 0.5s;
-  transition: transform 0.5s;
+  //-moz-transition: transform 0.5s;
+  //-webkit-transition: transform 0.5s;
+  //transition: transform 0.5s;
   transform: rotate(-180deg);
 }
