--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 
   <body>
     <%= render 'layouts/navbar' %>
-    <div class="container mt-5 py-5 px-5 rounded bg-light text-secondary">
+    <div class="container py-5 px-5 rounded bg-light text-secondary">
       <%= render 'layouts/devise_alerts' %>
       <%= yield %>
     </div>
