Acertando actions e páginas de vagas.

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -21,3 +21,8 @@ body {
   //transition: transform 0.5s;
   transform: rotate(-180deg);
 }
+
+.imagem-lista-vagas {
+  width: 128px;
+  height: 128px;
+}
