--- a/app/views/vagas/index.html.erb
+++ b/app/views/vagas/index.html.erb
@@ -2,25 +2,20 @@
 
 <h1>Vagas</h1>
 
-
-
-
   <tbody>
     <% @vagas.each do |vaga| %>
 
     <div class="media align-items-center text-muted py-3 px-3 border-top border-gray">
-      <%= image_tag  "sti.svg", class:"px-3 mr-4 rounded border border-gray", width: "128px", height: "128px" %>
+      <%= image_tag  'sti.svg', class: 'px-3 mr-4 rounded border border-gray imagem-lista-vagas' %>
       <p class="media-body pb-3 mb-0 lh-125 pr-5">
         <strong class="d-block text-gray-dark"><%= vaga.titulo %></strong>
         <span class="d-block pb-2 small"><%= vaga.empresa.nome %></span>
         <%= vaga.descricao %>
       </p>
-      <%= link_to 'Ver mais detalhes', vaga, class: 'btn btn-outline-primary' %></td>
+      <%= link_to 'Ver mais detalhes', vaga, class: 'btn btn-outline-primary' %>
     </div>
 
     <% end %>
-
-
 <br>
 
 <%= link_to 'Adicionar Vaga', new_vaga_path, class: 'btn btn-primary' %>
