--- a/app/views/layouts/_links_coordenador.html.erb
+++ b/app/views/layouts/_links_coordenador.html.erb
@@ -1,3 +1,5 @@
 <li class="nav-item active">
-  <%= link_to 'Empresas', empresas_path, class: 'nav-link' %>
+  <%= link_to empresas_path, class: 'nav-link' do %>
+    <%= fa_icon('building') %> Empresas
+  <% end %>
 </li>
