--- a/app/views/vagas/new.html.erb
+++ b/app/views/vagas/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Vaga</h1>
+<h1>Criar Vaga</h1>
 
 <%= render 'form', vaga: @vaga %>
 
-<%= link_to 'Back', vagas_path %>
+<%= link_to 'Voltar', vagas_path, class: 'btn btn-primary mt-3' %>
