--- a/app/views/layouts/_links_empresa.html.erb
+++ b/app/views/layouts/_links_empresa.html.erb
@@ -1,5 +1,7 @@
 <li class="nav-item active">
-  <%= link_to vagas_path, class: 'nav-link' do %>
-    <%= fa_icon('briefcase') %> Vagas
+  <% if current_account.perfil.validada %>
+    <%= link_to vagas_path, class: 'nav-link' do %>
+      <%= fa_icon('briefcase') %> Vagas
+    <% end %>
   <% end %>
 </li>
