--- a/app/views/layouts/_links_coordenador.html.erb
+++ b/app/views/layouts/_links_coordenador.html.erb
@@ -1,4 +1,4 @@
-<li class="nav-item active">
+<li class="nav-item">
   <%= link_to empresas_path, class: 'nav-link' do %>
     <%= fa_icon('building') %> Empresas
   <% end %>
