Adicionando aviso para empresa nao validada.

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,7 +7,7 @@
     </li>
       <li class="nav-item">
         <a class="nav-link" id="empresa-form-tab" data-toggle="tab" href="#empresa-form" role="tab"
-           aria-controls="empresa-form" aria-selected="true">Sou um Empresa</a>
+           aria-controls="empresa-form" aria-selected="true">Sou uma Empresa</a>
       </li>
     </ul>
   </div>
