--- a/app/views/empresas/_table_espera.html.erb
+++ b/app/views/empresas/_table_espera.html.erb
@@ -1,19 +1,36 @@
 <table class="table">
   <thead>
   <tr class="d-flex">
-    <th scope="col" class="col-4">Nome</th>
-    <th scope="col" class="col-2">CNPJ</th>
+    <th scope="col" class="col-3">Nome</th>
+    <th scope="col" class="col-1">CNPJ</th>
     <th scope="col" class="col-4">Endereço</th>
     <th scope="col" class="col-2">E-mail</th>
+    <th scope="col" class="col-2">Ações</th>
   </tr>
   </thead>
   <tbody>
   <% @empresas.select { |empresa| empresa.validada == nil }.each do |empresa| %>
     <tr class="d-flex">
-      <td class="col-4"><%= empresa.nome %></td>
-      <td class="col-2"><%= empresa.cnpj %></td>
+      <td class="col-3"><%= empresa.nome %></td>
+      <td class="col-1"><%= empresa.cnpj %></td>
       <td class="col-4"><%= empresa.endereco %></td>
       <td class="col-2"><%= empresa.account.email %></td>
+      <td class="col-2">
+        <div class="row">
+          <%= form_for empresa, url: update_validacao_empresa_path(empresa.id) do |f| %>
+            <%= f.hidden_field :status, value: true %>
+            <%= f.button :submit, class: 'btn btn-success rounded-0' do %>
+              <%= fa_icon 'check' %>
+            <% end %>
+          <% end %>
+          <%= form_for empresa, url: update_validacao_empresa_path(empresa.id) do |f| %>
+            <%= f.hidden_field :status, value: false %>
+            <%= f.button :submit, class: 'btn btn-danger rounded-0' do %>
+              <%= fa_icon 'times' %>
+            <% end %>
+            </div>
+          <% end %>
+          </td>
     </tr>
   <% end %>
   </tbody>
