--- a/app/views/empresas/_table_espera.html.erb
+++ b/app/views/empresas/_table_espera.html.erb
@@ -16,7 +16,11 @@
     <tbody>
     <% empresas.each do |empresa| %>
       <tr class="d-flex">
-        <td class="col-3"><%= empresa.nome %></td>
+        <td class="col-4">
+          <%= link_to empresa_path(empresa.id) do %>
+            <%= empresa.nome %>
+          <% end %>
+        </td>
         <td class="col-1"><%= empresa.cnpj %></td>
         <td class="col-4"><%= empresa.endereco %></td>
         <td class="col-2"><%= empresa.account.email %></td>
@@ -35,7 +39,7 @@
               <% end %>
               </div>
             <% end %>
-            </td>
+          </td>
       </tr>
     <% end %>
     </tbody>
