--- a/app/views/empresas/_table_reprovadas.html.erb
+++ b/app/views/empresas/_table_reprovadas.html.erb
@@ -15,7 +15,11 @@
     <tbody>
     <% empresas.each do |empresa| %>
       <tr class="d-flex">
-        <td class="col-4"><%= empresa.nome %></td>
+        <td class="col-4">
+          <%= link_to empresa_path(empresa.id) do %>
+            <%= empresa.nome %>
+          <% end %>
+        </td>
         <td class="col-2"><%= empresa.cnpj %></td>
         <td class="col-4"><%= empresa.endereco %></td>
         <td class="col-2"><%= empresa.account.email %></td>
