--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 
   <body>
     <%= render 'layouts/navbar' %>
-    <div class="container py-5 px-5 rounded bg-light text-secondary">
+    <div class="container py-5 mt-5 px-5 rounded bg-light text-secondary">
       <%= render 'layouts/devise_alerts' %>
 
       <% if account_signed_in? && current_account.is_empresa? &&
