--- a/app/views/devise/registrations/_form_aluno.html.erb
+++ b/app/views/devise/registrations/_form_aluno.html.erb
@@ -1,6 +1,25 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
+  <%= f.fields_for :pessoa do |e| %>
+    <div class="form-group">
+      <%= e.label :nome %>
+      <%= e.text_field :nome, class: 'form-control' %>
+    </div>
+  <% end %>
+
+  <%= f.fields_for :aluno do |e| %>
+    <div class="form-group">
+      <%= e.label :matricula %>
+      <%= e.text_field :matricula, class: 'form-control' %>
+    </div>
+
+    <div class="form-group">
+      <%= e.label :periodo %>
+      <%= e.text_field :periodo, class: 'form-control' %>
+    </div>
+  <% end %>
+
   <div class="form-group">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: 'email', class: 'form-control' %>
