--- a/app/views/vagas/_form.html.erb
+++ b/app/views/vagas/_form.html.erb
@@ -24,12 +24,12 @@
   <div class="row">
     <div class="form-group col-6">
       <%= f.label :data_fim %>
-      <%= f.text_field :data_fim, class: 'form-control', 'data-provide': 'datepicker' %>
+      <%= f.text_field :data_fim, class: 'form-control datepicker' %>
     </div>
 
     <div class="form-group col-6">
       <%= f.label :data_resposta %>
-      <%= f.text_field :data_resposta, class: 'form-control', 'data-provide': 'datepicker' %>
+      <%= f.text_field :data_resposta, class: 'form-control datepicker' %>
     </div>
   </div>
 
