--- a/app/views/layouts/_links_aluno.html.erb
+++ b/app/views/layouts/_links_aluno.html.erb
@@ -1,6 +1,6 @@
 <li class="nav-item">
-  <%= link_to empresas_path, class: 'nav-link' do %>
-    <%= fa_icon('building') %> Empresas
+  <%= link_to vagas_path, class: 'nav-link' do %>
+      <%= fa_icon('briefcase') %> Vagas
   <% end %>
 </li>
 <li class="nav-item">
