--- a/app/views/empresas/show.html.erb
+++ b/app/views/empresas/show.html.erb
@@ -1,18 +1,31 @@
-<h1><%= @empresa.nome %></h1>
 
-<p class="row">
-  <strong class="col-2">E-mail:</strong>
-  <%= @empresa.account.email %>
-</p>
+<div class="card p-3 mb-3">
+  <div class="row">
+    <div class="col-2">
+      <%= image_tag @empresa.avatar.medium.url %>
+    </div>
 
-<p class="row">
-  <strong class="col-2">CNPJ:</strong>
-  <%= @empresa.cnpj %>
-</p>
+    <div class="col-10">
+      <h1><%= @empresa.nome %></h1>
+      <div class="row">
+        <strong class="col-2">E-mail:</strong>
+        <%= @empresa.account.email %>
+      </div>
 
-<p class="row">
-  <strong class="col-2">Endereço:</strong>
-  <%= @empresa.endereco %>
-</p>
+      <div class="row">
+        <strong class="col-2">CNPJ:</strong>
+        <%= @empresa.cnpj %>
+      </div>
+
+      <div class="row">
+        <strong class="col-2">Endereço:</strong>
+        <%= @empresa.endereco %>
+      </div>
+    </div>
+  </div>
+</div>
+
+
 
 <%= link_to 'Voltar', empresas_path, class: 'btn btn-secondary' %>
+<%= link_to 'Editar', edit_empresa_path, class: 'btn btn-outline-info' %>
