Adicionando cpf no form de aluno. Criando seed de aluno.

--- a/app/views/devise/registrations/_form_aluno.html.erb
+++ b/app/views/devise/registrations/_form_aluno.html.erb
@@ -6,6 +6,11 @@
       <%= e.label :nome %>
       <%= e.text_field :nome, class: 'form-control' %>
     </div>
+
+    <div class="form-group">
+      <%= e.label :cpf %>
+      <%= e.text_field :cpf, class: 'form-control' %>
+    </div>
   <% end %>
 
   <%= f.fields_for :aluno do |e| %>
