Acertando qual tab e aonde as mensagens de erro são mostradas.

--- a/app/views/devise/registrations/_form_aluno.html.erb
+++ b/app/views/devise/registrations/_form_aluno.html.erb
@@ -1,5 +1,7 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+  <% if is_criacao_aluno? %>
+    <%= devise_error_messages! %>
+  <% end %>
 
   <%= f.fields_for :pessoa do |e| %>
     <div class="form-group">
