--- a/app/views/devise/registrations/_form_empresa.html.erb
+++ b/app/views/devise/registrations/_form_empresa.html.erb
@@ -1,5 +1,7 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+  <% unless is_criacao_aluno? %>
+    <%= devise_error_messages! %>
+  <% end %>
 
   <%= f.fields_for :empresa do |e| %>
     <div class="form-group">
