Alterando ids para não conflitar no futuro

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -11,7 +11,7 @@ body {
   @extend .alert-danger;
 }
 
-#espera-title, #aprovadas-title, #reprovadas-title {
+.pointer-cursor {
   cursor: pointer;
 }
 
