--- a/app/views/layouts/_links_coordenador.html.erb
+++ b/app/views/layouts/_links_coordenador.html.erb
@@ -4,6 +4,11 @@
   <% end %>
 </li>
 <li class="nav-item">
+  <%= link_to alunos_path, class: 'nav-link' do %>
+    <%= fa_icon('users') %> Alunos
+  <% end %>
+</li>
+<li class="nav-item">
   <%= link_to aluno_vagas_path, class: 'nav-link' do %>
       <%= fa_icon('list') %> Candidaturas
   <% end %>
