--- a/app/views/vagas/index.html.erb
+++ b/app/views/vagas/index.html.erb
@@ -1,34 +1,39 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Vagas</h1>
+<hr/>
+<% if !current_account.is_coordenador? %>
+    <% @vagas.each do |vaga| %>
+        <hr>
+        <div class="row">
+          <div class="col-md-6">
+            <div class="media align-items-center text-muted py-3 px-3">
+              <%= image_tag 'sti.svg', class: 'px-3 mr-4 rounded border border-gray imagem-lista-vagas' %>
+              <p class="media-body pb-3 mb-0 lh-125 pr-5">
+                <strong class="d-block text-gray-dark"><%= vaga.titulo %></strong>
+                <span class="d-block pb-2 small"><%= vaga.empresa_nome %></span>
+                <%= simple_format(vaga.descricao, {}, wrapper_tag: "span") %>
+              </p>
+            </div>
+          </div>
+          <div class="col-md-6 d-flex align-self-center align-items-end">
+            <%= link_to 'Ver mais detalhes', vaga, class: 'btn btn-outline-primary m-2 ml-auto' %>
 
-<% @vagas.each do |vaga| %>
-  <hr>
-  <div class="row">
-    <div class="col-md-6">
-      <div class="media align-items-center text-muted py-3 px-3">
-        <%= image_tag 'sti.svg', class: 'px-3 mr-4 rounded border border-gray imagem-lista-vagas' %>
-        <p class="media-body pb-3 mb-0 lh-125 pr-5">
-          <strong class="d-block text-gray-dark"><%= vaga.titulo %></strong>
-          <span class="d-block pb-2 small"><%= vaga.empresa_nome %></span>
-          <%= simple_format(vaga.descricao, {}, wrapper_tag: "span") %>
-        </p>
-      </div>
-    </div>
-    <div class="col-md-6 d-flex align-self-center align-items-end">
-          <%= link_to 'Ver mais detalhes', vaga, class: 'btn btn-outline-primary m-2 ml-auto' %>
-
-          <% if current_account.is_aluno? %>
+            <% if current_account.is_aluno? %>
                 <%= form_for AlunoVaga.new do |f| %>
                     <%= f.hidden_field :vaga_id, value: vaga.id %>
                     <%= f.submit 'Inscrever-se', class: 'btn btn-primary m-2 ml-auto' %>
                 <% end %>
-          <% end %>
+            <% end %>
 
-    </div>
-  </div>
+          </div>
+        </div>
+    <% end %>
+    <br>
+    <% if current_account.is_empresa? %>
+        <%= link_to 'Adicionar Vaga', new_vaga_path, class: 'btn btn-primary' %>
+    <% end %>
+<% else %>
+    <%= render partial: 'index_as_coordenador', locals: { vagas: @vagas } %>
 <% end %>
-<br>
-<% if current_account.is_empresa? %>
-    <%= link_to 'Adicionar Vaga', new_vaga_path, class: 'btn btn-primary' %>
-<% end %>
+
