--- a/app/views/empresas/_table_espera.html.erb
+++ b/app/views/empresas/_table_espera.html.erb
@@ -1,6 +1,6 @@
 <% if empresas.blank? %>
   <div class="alert alert-info">
-    Não existem empresas em espera para sem avaliadas.
+    Não existem empresas em espera para serem validadas.
   </div>
 <% else %>
   <table class="table">
