--- a/app/views/empresas/index.html.erb
+++ b/app/views/empresas/index.html.erb
@@ -1,3 +1,5 @@
+<h1 class="text-center">Empresas</h1>
+
 <h2 class="pointer-cursor" id="empresas-espera-title">
   Em Espera <%= fa_icon 'angle-down', id: 'espera-icon' %>
 </h2>
