--- a/app/views/empresas/show.html.erb
+++ b/app/views/empresas/show.html.erb
@@ -1,4 +1,3 @@
-
 <div class="card p-3 mb-3">
   <div class="row">
     <div class="col-2">
@@ -25,7 +24,7 @@
   </div>
 </div>
 
-
-
 <%= link_to 'Voltar', empresas_path, class: 'btn btn-secondary' %>
-<%= link_to 'Editar', edit_empresa_path, class: 'btn btn-outline-info' %>
+<% if current_account.is_empresa? && current_account.perfil.id == @empresa.id %>
+  <%= link_to 'Editar', edit_empresa_path, class: 'btn btn-outline-info' %>
+<% end %>
