--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -32,8 +32,20 @@
     </ul>
     <% if account_signed_in? %>
       <span class="navbar-text text-white mr-3">
-        Olá <b><%= current_account.perfil.nome %></b>!
+        Olá
+        <% if current_account.is_empresa? %>
+          <%= link_to empresa_path(current_account.perfil.id) do %>
+            <b><%= current_account.perfil.nome %></b>!
+          <% end %>
+        <% elsif current_account.is_aluno? %>
+          <%= link_to aluno_path(current_account.perfil.papel.id) do %>
+            <b><%= current_account.perfil.nome %></b>!
+          <% end %>
+        <% else %>
+            <b><%= current_account.perfil.nome %></b>!
+        <% end %>
       </span>
+
 
       <%= link_to 'Sair', destroy_account_session_path, method: :delete, class: 'btn btn-outline-light my-2 my-sm-0' %>
     <% else %>
