--- a/app/views/vagas/index.html.erb
+++ b/app/views/vagas/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Vagas</h1>
+<h1 id="vagasIndex">Vagas</h1>
 <hr/>
 <% if !current_account.is_coordenador? %>
     <% @vagas.each do |vaga| %>
