--- a/app/views/vagas/_index_as_coordenador.html.erb
+++ b/app/views/vagas/_index_as_coordenador.html.erb
@@ -1,4 +1,4 @@
-<h2 id="espera-title">
+<h2 class="pointer-cursor" id="espera-title">
   Em Espera <%= fa_icon 'angle-down', id: 'espera-icon' %>
 </h2>
 <div id="espera-div" style="display: none">
@@ -8,7 +8,7 @@
 </div>
 <hr>
 
-<h2 id="aprovadas-title" class="text-success">
+<h2 class="pointer-cursor text-success" id="aprovadas-title">
   Aprovadas <%= fa_icon 'angle-down', id: 'aprovadas-icon' %>
 </h2>
 <div id="aprovadas-div" style="display: none">
@@ -18,7 +18,7 @@
 </div>
 <hr>
 
-<h2 id="reprovadas-title" class="text-danger">
+<h2 class="pointer-cursor text-danger" id="reprovadas-title">
   Reprovadas  <%= fa_icon 'angle-down', id: 'reprovadas-icon' %>
 </h2>
 <div id="reprovadas-div" style="display: none">
