--- a/app/views/layouts/_links_aluno.html.erb
+++ b/app/views/layouts/_links_aluno.html.erb
@@ -1,10 +1,10 @@
 <li class="nav-item">
-  <%= link_to vagas_path, class: 'nav-link' do %>
+  <%= active_link_to vagas_path, class: 'nav-link' do %>
       <%= fa_icon('briefcase') %> Vagas
   <% end %>
 </li>
 <li class="nav-item">
-  <%= link_to aluno_vagas_path, class: 'nav-link' do %>
+  <%= active_link_to aluno_vagas_path, class: 'nav-link' do %>
       <%= fa_icon('list') %> Candidaturas
   <% end %>
 </li>
