--- a/app/views/vagas/show.html.erb
+++ b/app/views/vagas/show.html.erb
@@ -1,39 +1,85 @@
 <p id="notice"><%= notice %></p>
 
-<h1><%= @vaga.titulo %></h1>
+<div class="card p-3 mb-3">
+  <div class="row">
+    <div class="col-2">
+      <% if @vaga.empresa_avatar.present? %>
+        <%= image_tag @vaga.empresa_avatar.medium.url %>
+      <% else %>
+        <%= image_tag "default_company.png" %>
+      <% end %>
+    </div>
 
-<p class="row">
-  <strong class="col-2">Empresa:</strong>
-  <%= @vaga.empresa.nome %>
-</p>
+    <div class="col-10">
+     <h1><%= @vaga.titulo %></h1>
+      <div class="row">
+        <strong class="col-2">Empresa:</strong>
+        <%= @vaga.empresa.nome %>
+      </div>
 
-<p class="row">
-  <strong class="col-2">Descricao:</strong>
-  <%= @vaga.descricao %>
-</p>
+      <div class="row">
+        <strong class="col-2">Descricao:</strong>
+        <%= @vaga.descricao %>
+      </div>
 
-<p class="row">
-  <strong class="col-2">Data fim:</strong>
-  <%= @vaga.data_fim.to_date %>
-</p>
+      <div class="row">
+        <strong class="col-2">Data fim:</strong>
+        <%= @vaga.data_fim.to_date %>
+      </div>
 
-<p class="row">
-  <strong class="col-2">Data resposta:</strong>
-  <%= @vaga.data_resposta.to_date %>
-</p>
-
-<div class="row">
-  <% if current_account.is_empresa? %>
-    <%= link_to 'Editar', edit_vaga_path(@vaga), class: 'btn btn-primary col-1' %>
-    <%= link_to 'Voltar', vagas_path, class: 'btn btn-secondary col-1 offset-1' %>
-  <% end %>
-
-  <div class="col-md-3">
-    <% if current_account.is_aluno? %>
-        <%= form_for AlunoVaga.new do |f| %>
-            <%= f.hidden_field :vaga_id, value: @vaga.id %>
-          <%= f.submit 'Inscrever-se', class: 'btn btn-primary' %>
-        <% end %>
+      <div class="row">
+        <strong class="col-2">Data resposta:</strong>
+        <%= @vaga.data_resposta.to_date %>
+      </div>
+    </div>
+  </div>
+  <hr>
+  <div class="row">
+    <strong class="col-4">Habilidades Desejadas:</strong>
+    <% @vaga.vaga_habilidades.each do |habilidade| %>
+      <span class="badge badge-primary d-block ml-2"><%= habilidade.nome %></span>
     <% end %>
   </div>
+</div>
+
+<% if current_account.is_empresa? %>
+<div class="card p-3 mb-3">
+<h5>Adicionar Habilidades</h5>
+   
+      <%= form_for VagaHabilidade.new do |f| %>
+        <%= f.hidden_field :vaga_id, value: @vaga.id %>
+        <div class="form-row">
+          <div class="form-group col">
+            <%= f.label :habilidade_id %>
+            <%= f.select :habilidade_id, options_from_collection_for_select(Habilidade.all, :id, :nome), {}, class:"form-control" %>
+          </div>
+
+          <div class="form-group col">
+            <%= f.label :nivel %>
+            <%= f.select :nivel, options_for_select([:basico, :intermediario, :avancado]), {}, class:"form-control" %>
+          </div>
+
+          <div class="form-group col">
+             <label class="d-block">-</label>
+            <%= f.submit '+', class: 'btn btn-primary' %>
+          </div>
+        </div>
+      <% end %>
+
+  </div>
+<% end %>
+
+<div class="card p-3 mb-3">
+<% if current_account.is_empresa? %>
+  <div class="row">
+    <%= link_to 'Editar', edit_vaga_path(@vaga), class: 'btn btn-primary col-1 ml-3' %>
+    <%= link_to 'Voltar', vagas_path, class: 'btn btn-secondary col-1 ml-3' %>
+  </div>
+<% end %>
+<% if current_account.is_aluno? %>
+     <%= form_for AlunoVaga.new do |f| %>
+       <%= f.hidden_field :vaga_id, value: @vaga.id %>
+          <%= f.submit 'Inscrever-se', class: 'btn btn-primary' %>
+     <% end %>
+<% end %>
 </div>
