--- a/app/views/aluno_vagas/_table_aluno_vagas_empresa.html.erb
+++ b/app/views/aluno_vagas/_table_aluno_vagas_empresa.html.erb
@@ -1,31 +1,37 @@
 <table class="table table-striped table-bordered">
   <thead>
   <tr>
-    <th>Empresa</th>
-    <th>Descrição</th>
-    <th>Aluno</th>
+    <th>Aluno Nome</th>
+    <th>Vaga Título</th>
     <th>Situação <i class="fa fa-question-circle" aria-hidden="true"
-                  <%= bootstrap_tooltip :info_descricao_candidaturas %>></i></th>
+                    <%= bootstrap_tooltip :info_descricao_candidaturas %>></i></th>
     <th class="text-right">Ações</th>
   </tr>
   </thead>
   <tbody>
   <% aluno_vagas.each do |aluno_vaga| %>
       <tr>
-        <td><%= aluno_vaga.vaga.empresa.nome %></td>
-        <td><%= aluno_vaga.vaga.descricao %></td>
-        <td><%= aluno_vaga.aluno.matricula %></td>
+        <td><%= aluno_vaga.aluno.pessoa.nome %></td>
+        <td><%= aluno_vaga.vaga.titulo %></td>
         <td><%= texto_situacao_aluno_vaga(aluno_vaga) %></td>
-        <td>
+        <td style="width: 20%">
           <% if aluno_vaga.validado_coordenador? %>
-            <%= link_to 'Aprovar', aluno_vaga, method: :delete,
-                        class: 'btn btn-success mx-2 pull-right',
-                        data: { confirm: 'Você tem certeza?' } %>
-            <%= link_to 'Rejeitar', aluno_vaga, method: :delete,
-                        class: 'btn btn-danger mx-2 pull-right',
-                        data: { confirm: 'Você tem certeza?' } %>
+              <div class="row pull-right">
+              <% if aluno_vaga.validado_empresa || aluno_vaga.validado_empresa.nil? %>
+                  <%= form_for aluno_vaga do |f| %>
+                      <%= f.hidden_field :validado_empresa, value: false %>
+                      <%= f.submit 'Rejeitar', class: 'btn btn-danger mx-2' %>
+                  <% end %>
+              <% end %>
+              <% if aluno_vaga.validado_empresa == false || aluno_vaga.validado_empresa.nil? %>
+                  <%= form_for aluno_vaga do |f| %>
+                      <%= f.hidden_field :validado_empresa, value: true %>
+                      <%= f.submit 'Aprovar', class: 'btn btn-success mx-2' %>
+                  <% end %>
+                <% end %>
+              </div>
           <% else %>
-            Aguardando liberação do coordenador.
+              Aguardando liberação do coordenador.
           <% end %>
         </td>
       </tr>
