--- a/app/views/layouts/_links_empresa.html.erb
+++ b/app/views/layouts/_links_empresa.html.erb
@@ -5,3 +5,8 @@
     <% end %>
   <% end %>
 </li>
+<li class="nav-item">
+  <%= link_to aluno_vagas_path, class: 'nav-link' do %>
+      <%= fa_icon('list') %> Candidaturas
+  <% end %>
+</li>
